--- a/src/ListenTogether.Pages/Components/Loading.razor.css
+++ b/src/ListenTogether.Pages/Components/Loading.razor.css
@@ -2,6 +2,7 @@
     background-color: var(--mud-palette-background);
     margin: auto;
     padding: 20px 40px 20px 40px;
+    border-radius: 10px;
 }
 
 .message {
