--- a/src/ListenTogether.Pages/Pages/PlayingPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlayingPage.razor
@@ -38,23 +38,24 @@
         </div>
 
         <div class="music-image">
-            <div class="music-image-avatar @(_isPlaying ? "" : "animation-paused")">
-                @if (_currentMusic == null)
-                {
-                    <MudSkeleton Class="mt-1" Height="200" />
-                }
-                else
-                {
+            @if (_currentMusic == null)
+            {
+                <MudSkeleton Class="mt-1" SkeletonType="SkeletonType.Circle" Width="200px" Height="200px" />
+            }
+            else
+            {
+                <div class="music-image-avatar @(_isPlaying ? "" : "animation-paused")">
                     <img class="music-img mud-elevation-25"
                          src="@(_currentMusic.ImageUrl)" />
-                }
-            </div>
+                </div>
+            }
+
         </div>
 
         <div class="music-detail d-flex flex-column align-center">
             @if (_currentMusic == null)
             {
-                <MudSkeleton Class="mt-1" />
+                <MudSkeleton Width="120px" Height="60px" />
             }
             else
             {
@@ -76,10 +77,7 @@
             <div class="lyric">
                 @if (_lyrics == null)
                 {
-                    <MudSkeleton Class="mt-1" />
-                    <MudSkeleton Class="mt-1" />
-                    <MudSkeleton Class="mt-1" />
-                    <MudSkeleton Class="mt-1" />
+                    <MudSkeleton Class="ml-5 mr-5" Style="transform-origin: 0 0;" Height="300px" />
                 }
                 else
                 {
