--- a/src/ListenTogether.Pages/Pages/SearchPage.razor
+++ b/src/ListenTogether.Pages/Pages/SearchPage.razor
@@ -14,6 +14,7 @@
                 <div class="suggest-title">
                     搜索历史
                     <MudIconButton Icon="fa-solid fa-trash"
+                                   OnClick="ClearHistory"
                                    Size="Size.Small"
                                    Class="ml-2"></MudIconButton>
                 </div>
