--- a/src/ListenTogether.Pages/Pages/PlaylistPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlaylistPage.razor
@@ -55,7 +55,7 @@
                                                    Icon="fa-solid fa-folder-plus"
                                                    OnClick="@(()=>AddToMyFavoriteAsync(playlistItem))" />
                                 }
-                                <MudIconButton Icon="fa-solid fa-trash"
+                                <MudIconButton Icon="fa-solid fa-xmark"
                                                Class="ml-2"
                                                Size="Size.Small"
                                                OnClick="@(()=>DeleteAsync(playlistItem.Id))" />
