--- a/src/ListenTogether.Pages/Pages/SettingsPage.razor
+++ b/src/ListenTogether.Pages/Pages/SettingsPage.razor
@@ -9,6 +9,7 @@
 @inject NavigationManager NavigationManager
 @inject IAppVersion AppVersion
 @inject IAutoUpgrade AutoUpgrade
+@inject IMusicNetworkService MusicNetworkService
 
 <RouteAnimation>
     <div class="page">
@@ -232,6 +233,7 @@
     private async Task OnMusicFormatTypeChanged(MusicFormatTypeEnum value)
     {
         Settings.Environment.Play.MusicFormatType = value;
+        MusicNetworkService.SetMusicFormatType(Settings.Environment.Play.MusicFormatType);
         await WritePlayConfigAsync();
     }
     /// <summary>
