--- a/src/ListenTogether.Pages/Components/Player/PlayerBar.razor
+++ b/src/ListenTogether.Pages/Components/Player/PlayerBar.razor
@@ -39,7 +39,8 @@
                    Music="@(_music)"
                    IsPlaying="@(_isPlaying)"
                    Position="@(_position)"
-                   OnPlay="PlayAsync" />
+                   OnPlay="PlayAsync"
+                   OnNext="NextAsync" />
     </MudHidden>
 }
 else
