--- a/src/ListenTogether.Pages/Pages/RegisterPage.razor
+++ b/src/ListenTogether.Pages/Pages/RegisterPage.razor
@@ -14,7 +14,16 @@
                         <MudIcon Icon="@Icons.Material.Filled.Lock" Color="Color.Primary"></MudIcon>
                         <MudText Class="ml-1">注册</MudText>
                     </div>
-                    <MudForm @ref="@_form">
+                    <MudForm @ref="@_form"
+                             Class="mb-3">
+                        <MudTextField T="string"
+                                      Label="注册码"
+                        @bind-Value="_key"
+                                      MaxLength="6"
+                                      Required="true"
+                                      RequiredError="请输入注册码"
+                                      Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
+
                         <MudTextField T="string"
                                       Label="用户名"
                         @bind-Value="_username"
@@ -22,20 +31,16 @@
                                       Required="true"
                                       RequiredError="请输入用户名"
                                       Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
+
                         <MudTextField T="string"
-                                      Label="昵称"
-                        @bind-Value="_nickname"
-                                      MaxLength="20"
-                                      Required="true"
-                                      RequiredError="请输入昵称"
-                                      Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
-                        <MudTextField T="string" Label="密码"
+                                      Label="密码"
                         @bind-Value="_password"
                                       InputType="InputType.Password"
                                       MaxLength="20"
                                       Required="true"
                                       RequiredError="密码不能为空"
                                       Validation="@(new Func<string, IEnumerable<string>>(InputLength))" />
+
                         <MudTextField T="string" Label="确认密码"
                         @bind-Value="_password2"
                                       InputType="InputType.Password"
@@ -44,25 +49,21 @@
                                       RequiredError="密码不能为空"
                                       Validation="@(new Func<string, IEnumerable<string>>(Password2))" />
 
-                        <MudFileUpload T="IBrowserFile" @bind-Files="_file" OnFilesChanged="UploadFiles" Required="true" RequiredError="test">
-                            <ButtonTemplate>
-                                <MudButton HtmlTag="label"
-                                           Variant="Variant.Filled"
-                                           Color="Color.Primary"
-                                           StartIcon="@Icons.Material.Filled.CloudUpload"
-                                           for="@context">
-                                    选择头像
-                                </MudButton>
-                            </ButtonTemplate>
-                        </MudFileUpload>
-
                         <MudButton Class="mt-5"
                                    Variant="Variant.Filled"
                                    EndIcon="@Icons.Material.Filled.AppRegistration"
                                    Color="Color.Primary"
+                                   Style="width: 100%;"
                                    OnClick="@(async () => await RegisterAsync())">注册</MudButton>
 
                     </MudForm>
+
+                    已有账号？
+                    <MudElement HtmlTag="a"
+                                Style="color: var(--mud-palette-primary);"
+                                href="/login">
+                        去登录
+                    </MudElement>
                 </MudPaper>
             </MudItem>
         </MudGrid>
@@ -72,16 +73,13 @@
     private bool _isLoading = false;
     private MudForm _form = null!;
     private string _username = "";
-    private string _nickname = "";
     private string _password = "";
     private string _password2 = "";
-    private IBrowserFile _file = null!;
-    private string _fileName = "";
-    private int _maxFileLength = 500 * 1024;
+    private string _key = "";
 
     private IEnumerable<string> InputLength(string value)
     {
-        if (value.Length < 4)
+        if (value.Trim().Length < 4)
         {
             yield return "长度不足";
         }
@@ -94,16 +92,6 @@
         }
     }
 
-    private void UploadFiles(InputFileChangeEventArgs e)
-    {
-        if (e.GetMultipleFiles()[0].Size >= _maxFileLength)
-        {
-            DialogService.Show<Dialog>("", DialogBuilder.DialogParameters("文件大小超出限制"));
-            return;
-        }
-        _fileName = e.File.Name;
-    }
-
     private async Task RegisterAsync()
     {
         await _form.Validate();
@@ -113,24 +101,11 @@
         }
         _isLoading = true;
 
-        var avatar = new UserAvatar()
-            {
-                FileName = _fileName
-            };
-
-        var stream = _file.OpenReadStream(_maxFileLength);
-        using (MemoryStream ms = new MemoryStream())
-        {
-            await stream.CopyToAsync(ms);
-            avatar.File = ms.ToArray();
-        }
-
         var user = new UserRegister()
             {
-                Username = _username,
-                Nickname = _nickname,
+                Username = _username.Trim(),
                 Password = _password,
-                Avatar = avatar
+                Key = _key
             };
 
         var (succeed, message) = await UserService.RegisterAsync(user);
