支持修改头像

--- a/src/ListenTogether.Pages/Components/EditText.razor
+++ b/src/ListenTogether.Pages/Components/EditText.razor
@@ -22,6 +22,7 @@
 
     private async Task Rename()
     {
+        _newName = _newName.Trim();
         if (_newName.IsEmpty())
         {
             await _singleReference.FocusAsync();
